force-app/main/default/objects/Subscription_Distribution_List__c/Subscription_Distribution_List__c.object-meta.xml
<CustomObject>
    <description>This will replace the distribution list pick list to store more subscription specific information.</description>
    <label>Subscription  Distribution List</label>
    <nameField>
        <label>Subscription  Distribution List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscription  Distribution Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>