force-app/main/default/objects/Subscription_Distribution_List__c/fields/Attach_CSV__c.field-meta.xml
<CustomField>
    <fullName>Attach_CSV__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates to attach the report as CSV</description>
    <inlineHelpText>Indicates to attach the report as CSV</inlineHelpText>
    <label>Attach CSV</label>
    <type>Checkbox</type>
</CustomField>