force-app/main/default/objects/Subscription_Distribution_List__c/fields/Attach_Excel__c.field-meta.xml
<CustomField>
    <fullName>Attach_Excel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This indicates if the report is attached as Excel.</description>
    <inlineHelpText>This indicates if the report is attached as Excel.</inlineHelpText>
    <label>Attach Excel</label>
    <type>Checkbox</type>
</CustomField>