force-app/main/default/objects/Subscription_Distribution_List__c/fields/Attach_PDF__c.field-meta.xml
<CustomField>
    <fullName>Attach_PDF__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This indicates if the report is attached as PDF.</description>
    <inlineHelpText>This indicates if the report is attached as PDF.</inlineHelpText>
    <label>Attach PDF</label>
    <type>Checkbox</type>
</CustomField>