force-app/main/default/objects/Subscription_Distribution_List__c/fields/HasPicklistValue__c.field-meta.xml
<CustomField>
    <fullName>HasPicklistValue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate if there is a picklist value for this distribution list. This is used to auto-populate the original distribution list field, based on the new record.</description>
    <inlineHelpText>Indicate if there is a picklist value for this distribution list. This is used to auto-populate the original distribution list field, based on the new record.</inlineHelpText>
    <label>Has Picklist Value</label>
    <type>Checkbox</type>
</CustomField>