force-app/main/default/objects/Subscription_Distribution_List__c/fields/Reply_To__c.field-meta.xml
<CustomField>
    <fullName>Reply_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the reply to of the email notifications.</description>
    <inlineHelpText>This is the reply to of the email notifications.</inlineHelpText>
    <label>Reply To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Subscription  Distribution Lists (Reply To)</relationshipLabel>
    <relationshipName>Subscription_Distribution_Lists1</relationshipName>
    <type>Lookup</type>
</CustomField>