force-app/main/default/objects/Subscription_Distribution_List__c/fields/Sender__c.field-meta.xml
<CustomField>
    <fullName>Sender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the sender of the email notification.</description>
    <inlineHelpText>This is the sender of the email notification.</inlineHelpText>
    <label>Sender</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Houlihan Employee</value>
        </filterItems>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Distribution Lists</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Subscription  Distribution Lists</relationshipLabel>
    <relationshipName>Subscription_Distribution_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>