force-app/main/default/objects/Subscription_Distribution_List__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>This is the subject of the email notifications.</description>
    <inlineHelpText>This is the subject of the email notifications.</inlineHelpText>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>